fix landing image alignment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 44px;
     color: $purple;
 }
 
@@ -74,22 +74,29 @@ nav {
     margin: 0;
     padding: 0;
     background-image: url("../img/landing-fpl.jpg");
-    background-size:cover;
-    // background-position:;
-    // background-attachment: ;
+    background-size: 100%;
+    background-position: -50px -150px;
+    overflow: hidden;
     width: 100%;
     height: 100vh;
     position: relative;
     top: -75px;
     z-index: -1;
-
     .container-custom {
         position: relative;
         top: 75px;
         margin: 0 50px;
     }
-    .container-custom .col {
-        width: 50%;
+    .container-custom .col:first-child {
+        text-align: center;
+    }
+    img {
+        height: 500px;
+    }
+    .container-form {
+        margin: 10px;
+        padding: 10px 50px;
+        z-index: 100;
     }
   }
   
